deploy: c46547b5c67458a22a1637113c3b80dd0478aec3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,7 +423,9 @@ pre code { font-size: 15px !important; }
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
-p.feed-subscribe { display: none; }
+.feed-subscribe { display: none; }
+
+.svg-icon.orange { width: 0px; height: 0px; }
 
 .language-python + .language-plaintext { border-left: 1px solid grey; margin-left: 1rem !important; }
 
